@@ -1,30 +1,37 @@
-# Java2PerformanceAssessment
+# Scheduling Application
+
+## Purpose
+This application allows users to create, view, maintain, and delete customer appointments. Additionally,
+users can generate reports on the number of appointments, contact-to-customer appointments, and number of customers.
+
+### Author Info
+Author: Ike Maldonado  
+Email: imald14@wgu.edu  
+Phone: +1 (415) 760-7438  
+
+### Application Info
+Date: 11/24/2021  
+Application Version: 1.0  
+
+### IDE: Intellij
+
+IntelliJ IDEA 2021.2.2 (Ultimate Edition)  
+Build #IU-212.5284.40, built on September 13, 2021  
+Runtime version: 11.0.12+7-b1504.28 aarch64  
+VM: OpenJDK 64-Bit Server VM by JetBrains s.r.o.  
+macOS 12.0.1  
 
 
-Steps
-1. Create a new Java Project (NOT JavaFX project)
-2. Make sure the "PATH_TO_FX" is set
-   1. File -> Settings: Path Variables
-3. Add the lib directory for JavaFX
-4. Make model/view/controller packages under src
-5. Make Main.java
-6. Add "VM Options
-   1. --module-path ${PATH_TO_FX} --add-modules javafx.fxml,javafx.controls,javafx.graphics
-   2. Note: no spaces after commas!
-7. Make the first fxml
-8. Make the controller implement `Initializable`
-9. Do a test run
-10. Add Button and Label
-11. Add Button Handler and Label FXID
-12. Write some more code!
-
---- 
-
-countries table is populated
-first_level_divisions is populated
+## Getting started
 
 
-### MySQL version
-8.0.25
+## Additional Report description
+
+> Location: Reports Button > Additional Report Tab
+
+This report counts the total number of Appointments, Customers, Contacts, and logins (successful and unsuccessful).
 
 
+## MySQL info
+MySQL version: 8.0.25
+Driver: mysql-connector-java-8.0.25
